change font docker

--- a/template.html
+++ b/template.html
@@ -163,7 +163,7 @@
       </div>
       {{/with}}
 
-      <!-- H. TAX ADJUSTMENT -->
+      <!-- H. TAX ADJUST -->
       {{#with Invoices.[7]}}
       <div class="my-1">
         <div>{{no}}. {{title}}</div>
@@ -180,7 +180,7 @@
           </div>
 
           <div class="flex justify-between mb-3">
-            <div>TAX BORNED BY AGENT</div>
+            <div>TAX BORNED BY ADJUST</div>
             <div class="">{{total}}</div>
           </div>
         </div>
