--- a/template.html
+++ b/template.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link href="output.css" rel="stylesheet" />
   </head>
   <body class="px-8 py-4 mt-6 pr-16 ml-1 font-['Arial']">
     <!-- HEADER -->
@@ -180,7 +181,7 @@
           </div>
 
           <div class="flex justify-between mb-3">
-            <div>TAX BORNED BY ADJUST</div>
+            <div>TAX BORNED BY AGENT ADJUST</div>
             <div class="">{{total}}</div>
           </div>
         </div>
